# learn-solana

./: .gitignore  Dockerfile  README.md  cicd
calculator/: Cargo.toml
calculator/src/: calculator.rs  lib.rs
client/: .eslintrc.js  package-lock.json  package.json
client/src/: calculator.ts  main.ts  programs.ts  util.ts
hello/: package-lock.json  package.json
hello/src/: main.ts
old/square/: Cargo.toml
old/square/src/: lib.rs
old/sum/: Cargo.toml
old/sum/src/: lib.rs
square/: Cargo.toml
sum/src/: lib.rs
