[package]
name = "calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type= ["cdylib", "lib"]

[dependencies]
borsh = "0.9"
borsh-derive = "0.9"
solana-program = "1.14"

[dev-dependencies]
solana-program-test = "1.14"
solana-sdk = "1.14"
